Successfully linked JS and CSS file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>GDSC Website</title>
 </head>
 <body>
     <h1>This is GDSC Website</h1>
     <div id="sample-id"></div>
+    <script src="script.js"></script>
 </body>
 </html>
